# Distributed-Key-Value-Store

./: .gitignore  CMakeLists.txt  README.md
config/: cluster.docker.conf  cluster.local.conf
docker/: Dockerfile  docker-compose.yml
include/kvstore/: cluster_config.h  consistent_hash.h  lockfree_queue.h  net.h  protocol.h  raft_node.h  rpc_messages.h  sharded_map.h  wal.h
src/: main.cpp
src/bench/: bench_client.cpp
src/cli/: kv_cli.cpp
src/hashing/: consistent_hash.cpp
src/net/: protocol.cpp  raft_client.cpp  server.cpp
src/raft/: raft_node.cpp
src/storage/: sharded_map.cpp  wal.cpp
src/util/: cluster_config.cpp
tests/: hashing_test.cpp  raft_test.cpp  storage_test.cpp  wal_test.cpp
